[package]
name = "polymarket-tui"
version = "0.1.0"
edition = "2021"
description = "TUI for browsing Polymarket prediction markets"
license = "MIT"
repository = "https://github.com/zozo123/test-pi-harness-polymarket"

[[bin]]
name = "polymarket-tui"
path = "src/main.rs"

[[bin]]
name = "show"
path = "src/bin/show.rs"

[lib]
name = "polymarket_tui"
path = "src/lib.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
unicode-width = "0.2"

[profile.release]
lto = "thin"
strip = true
panic = "abort"
